<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/fav"
        android:icon="@drawable/ic_fav_green"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort_default"
        android:title="@string/sort_by_default"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_rating"
        android:title="@string/sort_by_rating"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_title"
        android:title="@string/sort_by_title"
        app:showAsAction="never" />
</menu>